samples/_failures_safe/1761462168_082256_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a372d09.c: In function ‘main’:
./samples/SAFE/__tmp_6a372d09.c:156:9: error: expected declaration or statement at end of input
  156 |         ptr++;
      |         ^~~
./samples/SAFE/__tmp_6a372d09.c:156:9: error: expected declaration or statement at end of input
